--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -8,6 +8,22 @@ services:
      - "2701:27017"
    volumes:
      - mongo_data:/data/db
+    
+  basketdb:
+   container_name: basketdb
+   restart:  always
+   ports:
+     - "6379:6379"
+
+  portainer:
+   container_name: portainer
+   restart:  always
+   ports:
+     - "8080:8000"
+     - "9000:9000"
+   volumes:
+     - /var/run/docker.sock:/var/run/docker.sock
+     - portainer_data:/data
 
   catalog.api:
    container_name: catalog.api
@@ -22,3 +38,14 @@ services:
    container_name: dbgui
    ports:
     - "3000:3000"
+
+  basket.api:
+    container_name: basket.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "CacheSettings:ConnectionString=basketdb:6379"
+    depends_on:
+      - basketdb
+    ports:
+      - "8001:80"
+
