--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -58,7 +58,7 @@ services:
    ports:
       - "8000:80"
   catalogdbgui:
-   container_name: dbgui
+   container_name: mongodbgui
    ports:
     - "3000:3000"
 
@@ -67,6 +67,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "CacheSettings:ConnectionString=basketdb:6379"
+      - "GrpcSettings:DiscountUrl=http://discount.grpc"
     depends_on:
       - basketdb
     ports:
@@ -82,3 +83,13 @@ services:
       - discountdb
     ports:
       - "8002:80"
+  
+  discount.grpc:
+    container_name: discount.grpc
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConnectionString=User ID =admin;Password=admin132;Server=discountdb;Port=5432;Database=DiscountDB;Integrated Security=true;Pooling=true;"
+    depends_on:
+      - discountdb
+    ports:
+      - "8003:80"
